--- a/index.html
+++ b/index.html
@@ -6,126 +6,335 @@
   <title>Paper Trading Dashboard</title>
   <style>
     :root { color-scheme: dark; }
-    body { font-family: Arial, sans-serif; background: #0f172a; color: #e2e8f0; margin: 0; padding: 20px; }
-    h1 { margin-bottom: 0.2em; }
-    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 16px; }
-    .card { background: #1e293b; border-radius: 12px; padding: 16px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); }
+    body { font-family: "Inter", "SF Pro Text", Arial, sans-serif; background: #0b1220; color: #e2e8f0; margin: 0; }
+    .page { max-width: 1400px; margin: 0 auto; padding: 24px; }
+    h1 { margin: 0 0 0.35em 0; letter-spacing: 0.2px; }
+    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 24px; }
+    .card { background: #111a2e; border-radius: 12px; padding: 20px; box-shadow: 0 4px 20px rgba(0,0,0,0.25); }
+    .card h3 { margin-top: 0; margin-bottom: 10px; font-size: 1.02em; }
     table { width: 100%; border-collapse: collapse; }
-    th, td { padding: 8px; text-align: left; }
-    th { border-bottom: 1px solid #334155; color: #94a3b8; font-weight: 600; }
-    tr:nth-child(even) { background: #111827; }
-    .pill { padding: 2px 8px; border-radius: 999px; font-size: 12px; font-weight: 600; }
-    .buy { background: #0ea5e9; color: #0b1220; }
-    .sell { background: #f97316; color: #0b1220; }
-    .status-ok { background: #22c55e; color: #052e16; }
-    .status-partial { background: #eab308; color: #422006; }
-    .status-error { background: #ef4444; color: #450a0a; }
-    .status-skipped { background: #94a3b8; color: #0f172a; }
-    canvas { width: 100%; height: 220px; }
+    th, td { padding: 9px 8px; text-align: left; }
+    th { border-bottom: 1px solid #22314f; color: #9fb0c8; font-weight: 600; }
+    tr:nth-child(even) { background: #0f172a; }
+    tr:hover { background: #17223a; }
+    .pill { padding: 4px 10px; border-radius: 20px; font-size: 0.8em; font-weight: 600; display: inline-block; }
+    .pill-buy { background: rgba(0,200,120,0.15); color: #00d084; }
+    .pill-sell { background: rgba(255,90,90,0.15); color: #ff5c5c; }
+    .status-ok { background: rgba(0,200,120,0.18); color: #00d084; }
+    .status-error { background: rgba(255,90,90,0.18); color: #ff5c5c; }
+    .status-running { background: rgba(76,129,255,0.18); color: #7da6ff; }
+    .status-partial { background: rgba(234,179,8,0.18); color: #facc15; }
+    .status-skipped { background: rgba(148,163,184,0.18); color: #cbd5e1; }
+    canvas { width: 100%; min-height: 260px; }
     .footer { margin-top: 20px; color: #94a3b8; font-size: 12px; }
     .note { color: #cbd5e1; font-size: 12px; max-width: 340px; }
+    .monospace { font-family: "DM Mono", "Roboto Mono", monospace; }
+    .num { text-align: right; }
+    .muted { color: #9fb0c8; font-size: 0.85em; }
+    .nowrap { white-space: nowrap; }
+    .tr-time { width: 160px; }
+    .summary-strip { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 12px; margin: 16px 0; }
+    .summary-box { background: #111a2e; border-radius: 10px; padding: 14px 18px; box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
+    .summary-value { font-size: 1.2em; font-weight: 700; }
+    .summary-label { font-size: 0.9em; color: #9fb0c8; margin-top: 4px; }
+    @media (max-width: 1200px) { .grid { grid-template-columns: 1fr; } }
+    .table-wrap { overflow-x: auto; }
+    .error-banner { display: none; background: rgba(255,90,90,0.15); color: #ffb4b4; padding: 10px 12px; border-radius: 8px; margin: 8px 0 16px; position: relative; }
+    .error-banner button { position: absolute; right: 10px; top: 8px; background: transparent; border: none; color: #ffb4b4; cursor: pointer; }
+    .skeleton { background: linear-gradient(90deg, #1a2539 0%, #1f2c44 50%, #1a2539 100%); background-size: 200% 100%; animation: shimmer 1.5s infinite; border-radius: 6px; min-height: 16px; }
+    @keyframes shimmer { 0% { background-position: 200% 0; } 100% { background-position: -200% 0; } }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <h1>Paper Trading Dashboard</h1>
-  <div id="asof" class="footer">Loading...</div>
-  <div class="grid">
-    <div class="card">
-      <h3>Equity</h3>
-      <canvas id="equityChart"></canvas>
+  <div class="page">
+    <h1>Paper Trading Dashboard</h1>
+    <div class="error-banner" id="errorBanner">Error loading data <button onclick="dismissError()">✕</button></div>
+    <div id="asof" class="footer">Loading...</div>
+
+    <div class="summary-strip" id="summaryStrip">
+      <div class="summary-box"><div class="summary-value" id="sumEquity">–</div><div class="summary-label">Total Equity</div></div>
+      <div class="summary-box"><div class="summary-value" id="sumPnl">–</div><div class="summary-label">Total PnL Today</div></div>
+      <div class="summary-box"><div class="summary-value" id="sumPositions">–</div><div class="summary-label">Open Positions</div></div>
+      <div class="summary-box"><div class="summary-value" id="sumWinRate">–</div><div class="summary-label">Win Rate</div></div>
     </div>
-    <div class="card">
-      <h3>Open Positions</h3>
-      <table id="positionsTable"></table>
+
+    <div class="grid">
+      <div class="card">
+        <h3>Equity</h3>
+        <canvas id="equityChart"></canvas>
+      </div>
+      <div class="card">
+        <h3>Open Positions</h3>
+        <div class="table-wrap"><table id="positionsTable"></table></div>
+      </div>
+      <div class="card">
+        <h3>Recent Trades</h3>
+        <div class="table-wrap"><table id="tradesTable"></table></div>
+      </div>
+      <div class="card">
+        <h3>Run Metrics</h3>
+        <div class="table-wrap"><table id="metricsTable"></table></div>
+      </div>
     </div>
-    <div class="card">
-      <h3>Recent Trades</h3>
-      <table id="tradesTable"></table>
-    </div>
-    <div class="card">
-      <h3>Run Metrics</h3>
-      <table id="metricsTable"></table>
-    </div>
+    <div class="footer">Updates every ~5 minutes.</div>
   </div>
-  <div class="footer">Updates every ~5 minutes.</div>
+
   <script>
     const fmtUsd = new Intl.NumberFormat('en-US', { style: 'currency', currency: 'USD', maximumFractionDigits: 2 });
+    const fmtPct = new Intl.NumberFormat('en-US', { style: 'percent', minimumFractionDigits: 2, maximumFractionDigits: 2 });
+
+    const state = { loading: true };
+
+    const formatPrice = (v) => Number(v || 0).toFixed(2);
+    const formatQty = (v) => {
+      const s = Number(v || 0).toFixed(6);
+      return s.replace(/\.0+$/,'').replace(/(\.\d*?)0+$/,'$1');
+    };
+    const formatMoney = (v) => fmtUsd.format(Number(v || 0));
+    const formatPnl = (v) => {
+      const n = Number(v || 0);
+      const sign = n > 0 ? '+' : n < 0 ? '-' : '';
+      const abs = Math.abs(n).toFixed(2);
+      return { text: `${sign}${abs}`, color: n > 0 ? '#22c55e' : n < 0 ? '#f87171' : '#e2e8f0' };
+    };
+    const formatPercent = (v) => {
+      const n = Number(v || 0);
+      const sign = n > 0 ? '+' : n < 0 ? '-' : '';
+      const abs = Math.abs(n).toFixed(2);
+      return `${sign}${abs}%`;
+    };
+
+    function showError(msg) {
+      const banner = document.getElementById('errorBanner');
+      banner.style.display = 'block';
+      banner.firstChild.textContent = msg + ' ';
+    }
+    function dismissError() {
+      document.getElementById('errorBanner').style.display = 'none';
+    }
 
     async function loadData() {
-      const res = await fetch('data/status.json?_=' + Date.now());
-      const data = await res.json();
-      document.getElementById('asof').innerText = 'As of ' + new Date(data.as_of).toLocaleString();
-      renderPositions(data);
-      renderTrades(data);
-      renderEquity(data);
-      renderMetrics(data);
+      try {
+        const res = await fetch('data/status.json?_=' + Date.now());
+        if (!res.ok) throw new Error('Load failed');
+        const data = await res.json();
+        state.loading = false;
+        dismissError();
+        document.getElementById('asof').innerText = 'As of ' + new Date(data.as_of).toLocaleString();
+        renderSummary(data);
+        renderPositions(data);
+        renderTrades(data);
+        renderEquity(data);
+        renderMetrics(data);
+      } catch (e) {
+        showError('Failed to load status.json');
+      }
+    }
+
+    function renderSummary(data) {
+      const eqArr = data.equity || [];
+      const lastEq = eqArr.length ? eqArr[eqArr.length - 1].equity : 0;
+      const lastTs = eqArr.length ? eqArr[eqArr.length - 1].ts : 0;
+      const dayStart = new Date(lastTs * 1000); dayStart.setHours(0,0,0,0);
+      const dayStartTs = dayStart.getTime()/1000;
+      const dayEq = eqArr.find(e => e.ts >= dayStartTs)?.equity ?? (eqArr[0]?.equity || 0);
+      const pnlToday = lastEq - dayEq;
+      const posCount = (data.positions || []).length;
+      const winRate = computeWinRate(data.trades || []);
+      const pnlFmt = formatPnl(pnlToday);
+      document.getElementById('sumEquity').textContent = formatMoney(lastEq || 0);
+      document.getElementById('sumPnl').textContent = pnlFmt.text;
+      document.getElementById('sumPnl').style.color = pnlFmt.color;
+      document.getElementById('sumPositions').textContent = posCount;
+      document.getElementById('sumWinRate').textContent = winRate !== null ? formatPercent(winRate * 100) : '–';
+    }
+
+    function computeWinRate(trades) {
+      const fee = 0; // frontend-only view; keep neutral
+      const buys = {};
+      const closed = [];
+      trades.sort((a,b)=>a.ts-b.ts);
+      for (const t of trades) {
+        if (t.side === 'BUY') {
+          (buys[t.symbol] ||= []).push({qty:t.qty, price:t.price});
+        } else {
+          let remaining = t.qty;
+          const queue = buys[t.symbol] || [];
+          while (remaining > 1e-9 && queue.length) {
+            const lot = queue[0];
+            const take = Math.min(remaining, lot.qty);
+            const pnl = (t.price - lot.price) * take - fee;
+            closed.push(pnl);
+            lot.qty -= take;
+            remaining -= take;
+            if (lot.qty <= 1e-9) queue.shift();
+          }
+        }
+      }
+      if (!closed.length) return null;
+      const wins = closed.filter(x=>x>0).length;
+      return wins / closed.length;
     }
 
     function renderPositions(data) {
       const tbl = document.getElementById('positionsTable');
-      const rows = [
-        '<tr><th>Symbol</th><th>Qty</th><th>Entry</th><th>Entry Time</th></tr>'
-      ];
-      data.positions.forEach(p => {
+      const header = '<tr><th>Symbol</th><th class="num">Qty</th><th class="num">Entry</th><th class="num">Unrealized PnL</th><th>Entry Time</th></tr>';
+      const rows = [];
+      (data.positions || []).forEach(p => {
         const d = new Date(p.entry_time * 1000).toLocaleString();
-        rows.push(`<tr><td>${p.symbol}</td><td>${Number(p.qty).toFixed(6)}</td><td>${Number(p.entry_price).toFixed(2)}</td><td>${d}</td></tr>`);
+        const px = (data.prices || {})[p.symbol] || 0;
+        const unrealized = (px - p.entry_price) * p.qty;
+        const pnlFmt = formatPnl(unrealized);
+        rows.push(`<tr>
+          <td><strong style="font-size:1.05em;">${p.symbol}</strong></td>
+          <td class="num monospace">${formatQty(p.qty)}</td>
+          <td class="num monospace">${formatPrice(p.entry_price)}</td>
+          <td class="num monospace" style="color:${pnlFmt.color}">${pnlFmt.text}</td>
+          <td class="muted nowrap">${d}</td>
+        </tr>`);
       });
-      tbl.innerHTML = rows.join('');
+      if (!rows.length) rows.push('<tr><td colspan="5" class="muted">No open positions</td></tr>');
+      tbl.innerHTML = header + rows.join('');
     }
 
     function renderTrades(data) {
       const tbl = document.getElementById('tradesTable');
-      const rows = [
-        '<tr><th>Time</th><th>Symbol</th><th>Side</th><th>Qty</th><th>Price</th></tr>'
-      ];
-      data.trades.forEach(t => {
+      const header = '<tr><th class="tr-time">Time</th><th>Symbol</th><th>Side</th><th class="num">Qty</th><th class="num">Price</th></tr>';
+      const rows = [];
+      (data.trades || []).forEach(t => {
         const d = new Date(t.ts * 1000).toLocaleString();
-        const sideCls = t.side === 'BUY' ? 'buy' : 'sell';
-        rows.push(`<tr><td>${d}</td><td>${t.symbol}</td><td><span class="pill ${sideCls}">${t.side}</span></td><td>${Number(t.qty).toFixed(6)}</td><td>${Number(t.price).toFixed(2)}</td></tr>`);
+        const sideCls = t.side === 'BUY' ? 'pill-buy' : 'pill-sell';
+        rows.push(`<tr>
+          <td class="muted nowrap tr-time">${d}</td>
+          <td>${t.symbol}</td>
+          <td><span class="pill ${sideCls}">${t.side}</span></td>
+          <td class="num monospace">${formatQty(t.qty)}</td>
+          <td class="num monospace">${formatPrice(t.price)}</td>
+        </tr>`);
       });
-      tbl.innerHTML = rows.join('');
+      if (!rows.length) rows.push('<tr><td colspan="5" class="muted">No trades yet</td></tr>');
+      tbl.innerHTML = header + rows.join('');
     }
 
     let chart;
+    const crosshairPlugin = {
+      id: 'crosshair',
+      afterDatasetsDraw(chart, args, opts) {
+        const { ctx, tooltip, chartArea } = chart;
+        if (!tooltip?.getActiveElements?.().length) return;
+        const x = tooltip.caretX;
+        ctx.save();
+        ctx.strokeStyle = '#334155';
+        ctx.lineWidth = 1;
+        ctx.beginPath();
+        ctx.moveTo(x, chartArea.top);
+        ctx.lineTo(x, chartArea.bottom);
+        ctx.stroke();
+        ctx.restore();
+      }
+    };
+
+    function downsample(arr, maxPoints = 1000) {
+      if (arr.length <= maxPoints) return arr;
+      const step = Math.ceil(arr.length / maxPoints);
+      const res = [];
+      for (let i = 0; i < arr.length; i += step) res.push(arr[i]);
+      return res;
+    }
+
     function renderEquity(data) {
-      const ctx = document.getElementById('equityChart').getContext('2d');
-      const labels = data.equity.map(e => new Date(e.ts * 1000).toLocaleTimeString());
-      const eq = data.equity.map(e => e.equity);
+      const ctxEl = document.getElementById('equityChart');
+      const wrap = ctxEl.parentElement;
+      const eqFull = data.equity || [];
+      if (eqFull.length < 2) {
+        wrap.innerHTML = '<div class="muted">Insufficient data</div>';
+        return;
+      }
+      const eqDown = downsample(eqFull);
+      const labels = eqDown.map(e => new Date(e.ts * 1000).toLocaleTimeString());
+      const eq = eqDown.map(e => e.equity);
+      const ctx = ctxEl.getContext('2d');
       if (chart) chart.destroy();
+      const last = eq[eq.length-1] || 0;
+      const first = eq[0] || 0;
+      const positive = last - first >= 0;
+      const lineColor = positive ? '#22c55e' : '#f87171';
+      const gradient = ctx.createLinearGradient(0, 0, 0, 260);
+      gradient.addColorStop(0, positive ? 'rgba(34,197,94,0.25)' : 'rgba(248,113,113,0.25)');
+      gradient.addColorStop(1, 'rgba(17,24,39,0.05)');
+      const step = Math.max(1, Math.floor(labels.length / 6));
       chart = new Chart(ctx, {
         type: 'line',
-        data: { labels, datasets: [{ label: 'Equity', data: eq, borderColor: '#22d3ee', fill: false, tension: 0.2 }] },
-        options: { scales: { x: { display: true }, y: { display: true } }, plugins: { legend: { display: false } } }
+        data: { labels, datasets: [{ label: 'Equity', data: eq, borderColor: lineColor, backgroundColor: gradient, fill: true, tension: 0.4, borderWidth: 2, pointRadius: 0 }] },
+        options: {
+          interaction: { mode: 'index', intersect: false },
+          plugins: {
+            legend: { display: false },
+            tooltip: {
+              callbacks: {
+                label: (ctx) => `Equity: ${formatMoney(ctx.parsed.y)}`
+              }
+            },
+            annotationText: {
+              afterDatasetsDraw(chart) {
+                const { ctx } = chart;
+                ctx.save();
+                ctx.fillStyle = '#cbd5e1';
+                ctx.font = '600 12px "Inter", sans-serif';
+                ctx.fillText(`Current: ${formatMoney(last)}`, chart.chartArea.right - 160, chart.chartArea.top + 14);
+                ctx.restore();
+              }
+            }
+          },
+          scales: {
+            x: {
+              ticks: { callback: (val, idx) => idx % step === 0 ? labels[idx] : '' }
+            },
+            y: { grid: { color: '#1f2a44' } }
+          }
+        },
+        plugins: [crosshairPlugin, {
+          id: 'annotationText'
+        }]
       });
     }
 
     function renderMetrics(data) {
       const tbl = document.getElementById('metricsTable');
-      const rows = [
-        '<tr><th>Time</th><th>Status</th><th>Equity</th><th>Cash</th><th>Pos</th><th>Trades</th><th>Fees</th><th>Duration</th><th>Note</th></tr>'
-      ];
+      const header = '<tr><th>Time</th><th>Status</th><th class="num">Equity</th><th class="num">Cash</th><th class="num">Pos</th><th class="num">Trades</th><th class="num">Fees</th><th class="num">Duration</th><th>Note</th></tr>';
+      const rows = [];
       (data.metrics || []).forEach(m => {
         const d = new Date(m.ts * 1000).toLocaleString();
-        const cls = `status-${(m.status || 'ok').toLowerCase()}`;
+        const status = (m.status || 'ok').toLowerCase();
+        const cls = `status-${status}`;
         const tradesDetail = `${m.trades || 0} (${m.buys || 0}/${m.sells || 0})`;
         rows.push(
           `<tr>
-            <td>${d}</td>
+            <td class="muted nowrap">${d}</td>
             <td><span class="pill ${cls}">${m.status || 'ok'}</span></td>
-            <td>${fmtUsd.format(m.equity || 0)}</td>
-            <td>${fmtUsd.format(m.cash || 0)}</td>
-            <td>${m.positions ?? 0}</td>
-            <td>${tradesDetail}</td>
-            <td>${fmtUsd.format(m.fees || 0)}</td>
-            <td>${(m.duration_ms || 0)} ms</td>
+            <td class="num monospace" style="font-size:1.1em;">${formatMoney(m.equity || 0)}</td>
+            <td class="num monospace">${formatMoney(m.cash || 0)}</td>
+            <td class="num monospace">${m.positions ?? 0}</td>
+            <td class="num monospace">${tradesDetail}</td>
+            <td class="num monospace">${formatMoney(m.fees || 0)}</td>
+            <td class="num monospace">${(m.duration_ms || 0)} ms</td>
             <td class="note">${m.note || ''}</td>
           </tr>`
         );
       });
-      tbl.innerHTML = rows.join('');
+      if (!rows.length) rows.push('<tr><td colspan="9" class="muted">No metrics yet</td></tr>');
+      tbl.innerHTML = header + rows.join('');
     }
 
+    // Loading placeholders
+    function setLoading() {
+      document.getElementById('positionsTable').innerHTML = '<tr><td class="muted">Loading…</td></tr>';
+      document.getElementById('tradesTable').innerHTML = '<tr><td class="muted">Loading…</td></tr>';
+      document.getElementById('metricsTable').innerHTML = '<tr><td class="muted">Loading…</td></tr>';
+    }
+
+    setLoading();
     loadData();
     setInterval(loadData, 60000);
   </script>
