--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
     .error-banner button { position: absolute; right: 10px; top: 8px; background: transparent; border: none; color: #ffb4b4; cursor: pointer; }
     .skeleton { background: linear-gradient(90deg, #1a2539 0%, #1f2c44 50%, #1a2539 100%); background-size: 200% 100%; animation: shimmer 1.5s infinite; border-radius: 6px; min-height: 16px; }
     @keyframes shimmer { 0% { background-position: 200% 0; } 100% { background-position: -200% 0; } }
+    .pagination { display: flex; align-items: center; justify-content: space-between; gap: 10px; flex-wrap: wrap; margin-top: 6px; font-size: 0.92em; color: #cbd5e1; }
+    .pagination select { background: #0f172a; color: #e2e8f0; border: 1px solid #22314f; border-radius: 6px; padding: 6px 8px; }
+    .pagination button { background: #1a2438; color: #e2e8f0; border: 1px solid #22314f; border-radius: 6px; padding: 6px 10px; cursor: pointer; }
+    .pagination button:disabled { opacity: 0.5; cursor: default; }
+    .pagination .page-info { font-weight: 600; }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -74,6 +79,7 @@
       <div class="card">
         <h3>Open Positions</h3>
         <div class="table-wrap table-scroll"><table id="positionsTable" class="table-sticky"></table></div>
+        <div class="pagination" id="positionsPagination"></div>
       </div>
     </div>
 
@@ -81,10 +87,12 @@
       <div class="card">
         <h3>Recent Trades</h3>
         <div class="table-wrap table-scroll"><table id="tradesTable" class="table-sticky"></table></div>
+        <div class="pagination" id="tradesPagination"></div>
       </div>
       <div class="card">
         <h3>Run Metrics</h3>
         <div class="table-wrap table-scroll"><table id="metricsTable" class="table-sticky"></table></div>
+        <div class="pagination" id="metricsPagination"></div>
       </div>
     </div>
     <div class="footer">Updates every ~5 minutes.</div>
@@ -94,7 +102,12 @@
     const fmtUsd = new Intl.NumberFormat('en-US', { style: 'currency', currency: 'USD', maximumFractionDigits: 2 });
     const fmtPct = new Intl.NumberFormat('en-US', { style: 'percent', minimumFractionDigits: 2, maximumFractionDigits: 2 });
 
-    const state = { loading: true };
+    const state = { loading: true, data: null };
+    const paginationState = {
+      positions: { page: 1, size: 10, sizes: [10, 25, 50] },
+      trades: { page: 1, size: 10, sizes: [10, 25, 50] },
+      metrics: { page: 1, size: 10, sizes: [10, 25, 50] }
+    };
 
     const formatPrice = (v) => Number(v || 0).toFixed(2);
     const formatQty = (v) => {
@@ -130,6 +143,7 @@
         if (!res.ok) throw new Error('Load failed');
         const data = await res.json();
         state.loading = false;
+        state.data = data;
         dismissError();
         document.getElementById('asof').innerText = 'As of ' + new Date(data.as_of).toLocaleString();
         renderSummary(data);
@@ -191,7 +205,9 @@
       const tbl = document.getElementById('positionsTable');
       const header = '<tr><th>Symbol</th><th class="num">Qty</th><th class="num">Entry</th><th class="num">Unrealized PnL</th><th>Entry Time</th></tr>';
       const rows = [];
-      (data.positions || []).forEach(p => {
+      const positions = data.positions || [];
+      const page = paginate(positions, 'positions');
+      page.items.forEach(p => {
         const d = new Date(p.entry_time * 1000).toLocaleString();
         const px = (data.prices || {})[p.symbol] || 0;
         const unrealized = (px - p.entry_price) * p.qty;
@@ -206,6 +222,7 @@
       });
       if (!rows.length) rows.push('<tr><td colspan="5" class="muted">No open positions</td></tr>');
       tbl.innerHTML = header + rows.join('');
+      renderPagination('positions', positions.length);
     }
 
     function renderTrades(data) {
@@ -213,7 +230,8 @@
       const header = '<tr><th class="tr-time">Time</th><th>Symbol</th><th>Side</th><th class="num">Qty</th><th class="num">Price</th></tr>';
       const rows = [];
       const ordered = [...(data.trades || [])].sort((a,b)=>b.ts-a.ts);
-      ordered.forEach(t => {
+      const page = paginate(ordered, 'trades');
+      page.items.forEach(t => {
         const d = new Date(t.ts * 1000).toLocaleString();
         const sideCls = t.side === 'BUY' ? 'pill-buy' : 'pill-sell';
         rows.push(`<tr>
@@ -226,6 +244,7 @@
       });
       if (!rows.length) rows.push('<tr><td colspan="5" class="muted">No trades yet</td></tr>');
       tbl.innerHTML = header + rows.join('');
+      renderPagination('trades', ordered.length);
     }
 
     let chart;
@@ -315,7 +334,9 @@
       const tbl = document.getElementById('metricsTable');
       const header = '<tr><th>Time</th><th>Status</th><th class="num">Equity</th><th class="num">Cash</th><th class="num">Pos</th><th class="num">Trades</th><th class="num">Fees</th><th class="num">Duration</th><th>Note</th></tr>';
       const rows = [];
-      (data.metrics || []).forEach(m => {
+      const metrics = data.metrics || [];
+      const page = paginate(metrics, 'metrics');
+      page.items.forEach(m => {
         const d = new Date(m.ts * 1000).toLocaleString();
         const status = (m.status || 'ok').toLowerCase();
         const cls = `status-${status}`;
@@ -336,6 +357,7 @@
       });
       if (!rows.length) rows.push('<tr><td colspan="9" class="muted">No metrics yet</td></tr>');
       tbl.innerHTML = header + rows.join('');
+      renderPagination('metrics', metrics.length);
     }
 
     // Loading placeholders
@@ -344,6 +366,63 @@
       document.getElementById('tradesTable').innerHTML = '<tr><td class="muted">Loading…</td></tr>';
       document.getElementById('metricsTable').innerHTML = '<tr><td class="muted">Loading…</td></tr>';
     }
+
+    function paginate(arr, key) {
+      const cfg = paginationState[key];
+      const totalPages = Math.max(1, Math.ceil((arr?.length || 0) / cfg.size));
+      cfg.page = Math.min(Math.max(1, cfg.page), totalPages);
+      const start = (cfg.page - 1) * cfg.size;
+      return { items: (arr || []).slice(start, start + cfg.size), totalPages };
+    }
+
+    function renderPagination(key, totalItems) {
+      const el = document.getElementById(`${key}Pagination`);
+      if (!el) return;
+      const cfg = paginationState[key];
+      const totalPages = Math.max(1, Math.ceil((totalItems || 0) / cfg.size));
+      cfg.page = Math.min(Math.max(1, cfg.page), totalPages);
+      el.innerHTML = `
+        <div>Rows per page
+          <select data-pagetype="size" data-key="${key}">
+            ${cfg.sizes.map(s => `<option value="${s}" ${s === cfg.size ? 'selected' : ''}>${s}</option>`).join('')}
+          </select>
+        </div>
+        <div class="pagination-meta">${totalItems} items</div>
+        <div class="pagination-controls">
+          <button data-pagetype="prev" data-key="${key}" ${cfg.page <= 1 ? 'disabled' : ''}>Prev</button>
+          <span class="page-info">Page ${cfg.page} of ${totalPages}</span>
+          <button data-pagetype="next" data-key="${key}" ${cfg.page >= totalPages ? 'disabled' : ''}>Next</button>
+        </div>`;
+    }
+
+    function rerenderTable(key) {
+      if (!state.data) return;
+      if (key === 'positions') return renderPositions(state.data);
+      if (key === 'trades') return renderTrades(state.data);
+      if (key === 'metrics') return renderMetrics(state.data);
+    }
+
+    document.addEventListener('change', (e) => {
+      const type = e.target?.dataset?.pagetype;
+      const key = e.target?.dataset?.key;
+      if (type === 'size' && key && paginationState[key]) {
+        paginationState[key].size = Number(e.target.value) || paginationState[key].size;
+        paginationState[key].page = 1;
+        rerenderTable(key);
+      }
+    });
+
+    document.addEventListener('click', (e) => {
+      const type = e.target?.dataset?.pagetype;
+      const key = e.target?.dataset?.key;
+      if (!type || !key || !paginationState[key]) return;
+      if (type === 'prev') {
+        paginationState[key].page = Math.max(1, paginationState[key].page - 1);
+      } else if (type === 'next') {
+        paginationState[key].page += 1;
+      }
+      rerenderTable(key);
+    });
 
     setLoading();
     loadData();
